Code cleaned, configured h2 database output file, added initialization of data if database is empty, decreased Java version to 8.