@@ -1,17 +1,19 @@
-package com.assignment.registers.controllers.dto;
+package com.assignment.registers.dto;
 
 import com.assignment.registers.entities.Register;
 
+import java.util.Collections;
 import java.util.List;
 
 public class RegisterSummary {
     private final List<Register> registers;
 
     public RegisterSummary(List<Register> registers) {
-        this.registers = List.copyOf(registers);
+        this.registers = Collections.unmodifiableList(registers);
     }
 
     public List<Register> getRegisters() {
         return registers;
     }
+
 }
